--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.2.1/webcomponents-bundle.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>For The Web</title>
+  <title>Steven and Ashley</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     html, body, div, span, applet, object, iframe,
@@ -33,10 +35,14 @@
     }
     body {
       line-height: 1;
+      background: #f5f5f5;
     }
-    html, body {
+    html {
       height: 100%;
+    }
+    body {
       width: 100%;
+      margin: 0 auto;
     }
     ol, ul {
       list-style: none;
@@ -54,10 +60,22 @@
       border-spacing: 0;
     }
     body {
-      font-family: sans-serif;
+      font-family: 'Lato', sans-serif;
       font-size: 16px;
+      --primary-dark: #033C53;
+      --primary-light: #29596d;
+      --secondary-dark: #FAA41A;
+      --secondary-light: #F9B641;
+      --accent-dark: #0576A7;
+      --accent-light: #64CADC;
+      --mdc-theme-on-primary: black;
+      --mdc-theme-primary: white;
+      --mdc-theme-on-secondary: black;
+      --mdc-theme-secondary: white;
+      max-width: 1024px;
     }
   </style>
+
 </head>
 <body>
   <app-shell></app-shell>
