feat: form submit works

--- a/src/index.html
+++ b/src/index.html
@@ -62,16 +62,13 @@
     body {
       font-family: 'Lato', sans-serif;
       font-size: 16px;
-      --primary-dark: #033C53;
-      --primary-light: #29596d;
-      --secondary-dark: #FAA41A;
-      --secondary-light: #F9B641;
-      --accent-dark: #0576A7;
-      --accent-light: #64CADC;
+      --paper-font-common-base_-_font-family: 'Lato', sans-serif;
+      --primary: #eed688;
       --mdc-theme-on-primary: black;
       --mdc-theme-primary: white;
       --mdc-theme-on-secondary: black;
       --mdc-theme-secondary: white;
+      --button-style: linear-gradient(90deg, #eed688 0%, #fffbcc 51%, #eed688 100%);
       max-width: 1024px;
     }
   </style>
