--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,8 @@
       font-family: 'Lato', sans-serif;
       font-size: 16px;
       --paper-font-common-base_-_font-family: 'Lato', sans-serif;
-      --primary: #eed688;
+      --primary: #612a3f;
+      --secondary: #225c58;
       --mdc-theme-on-primary: black;
       --mdc-theme-primary: white;
       --mdc-theme-on-secondary: black;
