feat: finalize party and people data

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,7 @@
       --paper-font-common-base_-_font-family: 'Lato', sans-serif;
       --primary: #612a3f;
       --secondary: #225c58;
+      --grey: #616161;
       --mdc-theme-on-primary: black;
       --mdc-theme-primary: white;
       --mdc-theme-on-secondary: black;
